k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trustescrow
  labels:
    name: trustescrow
    environment: production
